# video_processing

./: README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
